0.71.4  2015-??-??

enhancements
- improved parsing and intergration of X-13 error messages
- checkX13 performs more tests and returns an error report.

under the hood
- automated tests for all calls in the wiki

documentation
- new sections on user defined holidays and the use of seasonal in production
- new example on Indian Diwali in ?genhol
- dates of Indian Diwali and Indian industrial production

bug fixes
- genhol() can be used inside a seas() call


0.70.1  2014-10-02

new features
- support for the HTML version of X-13. The 'out' function displays the output 
  of X-13 in the browser.
- The 'inspect' function is based on Shiny and can be used without RStudio. It 
  offers access to all series that can be produced by X-13, as well as access to 
  the HTML output of X-13.

enhancements
- empty specs can be specified as empty strings. This is more intuitive than the 
  previously employed empty lists (which are still working). Empty 
  strings are also used as defaults and in the documentation.
- improved parsing of X-13 messages.
- documentation improvements.

under the hood
- flags are used when calling X-13. This makes some early g77 compilations for 
  OS-X unusable.
- use of the .udg file to extract summary statistics.
- support for HTML and non-HTML versions of X-13.

bug fixes
- numerical specification of arima.model led to wrong seasonal part.
- restrict start year > 999, to avoid some millenium bugs.
- si-ratio was wrongly extracted if no trend was estimated
- 'series' drops an error if the requested series is not compatible with the 
  adjustment method, rather than adjusting the method. E.g., if x11.trend is 
  requested from a seats model, an error will be returned, rather than switching 
  the adjustment to x11. The old behavior was confusing.


0.60.0  2014-05-09

new features
- views of 'inspect' are now customizable
- 'identify' method for outlier selection by point and click
- demo(seas) for a demonstration of basic functionality

