@@ -1,20 +1,18 @@
 
-mod_spclist <- function(x, ...){
+mod_spclist <- function(x, list){
   # Add one or several X-13ARIMA-SEATS specs/arguments to a spclist
   #
   # x  "spclist" object
+  # list named list with additional spec.argument combinations
   #
   # returns a "spclist"
   #
   # required by seas
   stopifnot(inherits(x, "spclist"))
   
-  
-  mod.list <- list(...)
-  # browser()
-  for (i in seq_along(mod.list)){
-    content.i <- mod.list[[i]]
-    names.i <- names(mod.list)[i]
+  for (i in seq_along(list)){
+    content.i <- list[[i]]
+    names.i <- names(list)[i]
     
     split.names.i <- strsplit(names.i, "\\.")
     
@@ -91,13 +89,13 @@ consist_spclist <-function(x){
 
   ### general output modification
   
-  x <- mod_spclist(x, estimate.save = c("model", "estimates", "lkstats", 
-                                        "residuals"))
+  x <- mod_spclist(x, list = list(estimate.save = c("model", "estimates", "lkstats", 
+                                        "residuals")))
   
   
-  x <- mod_spclist(x, spectrum.print = "qs")
+  x <- mod_spclist(x, list = list(spectrum.print = "qs"))
   
-  x <- mod_spclist(x, transform.print = "aictransform")
+  x <- mod_spclist(x, list = list(transform.print = "aictransform"))
   
 
 
@@ -110,20 +108,20 @@ consist_spclist <-function(x){
   ### spec specific output modification
   
   if (!is.null(x$seats)){
-    x <- mod_spclist(x, seats.save = c("s10", "s11", "s12", "s13", "s16", "s18"))    
+    x <- mod_spclist(x, list = list(seats.save = c("s10", "s11", "s12", "s13", "s16", "s18")))    
   } 
   
   if (!is.null(x$x11)){
 
-    x <- mod_spclist(x, x11.save = c("d10", "d11", "d12", "d13", "d16", "e18"))
+    x <- mod_spclist(x, list = list(x11.save = c("d10", "d11", "d12", "d13", "d16", "e18")))
   } 
   
   if (!is.null(x$automdl)){
-    x <- mod_spclist(x, automdl.print = "bestfivemdl")
+    x <- mod_spclist(x, list = list(automdl.print = "bestfivemdl"))
   }
   
   if (!is.null(x$force)){
-    x <- mod_spclist(x, force.save = "saa")
+    x <- mod_spclist(x, list = list(force.save = "saa"))
   }
   x
 }
